--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <body>
         <div id="bloc_page">
             <header>
+
+            	<div id="logo">
+                    <img src="images/Reservia.svg" alt="Logo de Reservia" />  
+                </div>
+
+            	<nav>
+                    <ul>
+                        <li><a href="#">Hébergements</a></li>
+                        <li><a href="#">Activités</a></li>
+                        <li><a href="#">S'inscrire</a></li>
+                    </ul>
+                </nav>
                
             </header>    
             
