--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
            
 
-            <section id="activity_block">
+            <section>
                 <h1>Activités à Marseille</h1>
                 
                     <a href="#" class="">Vieux Port <img src="images/activites/Vieux Port.jpg" alt="Photo du Vieux Port" /></a>
