--- a/index.html
+++ b/index.html
@@ -56,8 +56,74 @@
             
 
             <section>
-                <aside>
+                <aside id="hebergements_block">
                     <h1>Hébergements à Marseille</h1>
+                    <div class="hebergements">
+                        <a href="#" class="">Auberge la Cannebière <img src="images/hebergements/Auberge la Cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" /></a>
+                        <p>Nuit à partir de 25€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+
+                        <div class="hebergements">
+                        <a href="#" class="">Hôtel du port <img src="images/hebergements/Hotel du port.jpg" alt="Photo de l'Hôtel du port" /></a>
+                        <p>Nuit à partir de 52€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                        </div>
+
+                        <div class="hebergements">
+                        <a href="#" class="">Hôtel Les mouettes <img src="images/hebergements/Hotel Les mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" /></a>
+                        <p>Nuit à partir de 76€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+
+                        <div class="hebergements">
+                        <a href="#" class="">Hôtel de la mer <img src="images/hebergements/Hotel de la mer.jpg" alt="Photo de l'Hôtel de la mer" /></a>
+                        <p>Nuit à partir de 46€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+
+                        <div class="hebergements">
+                        <a href="#" class="">Auberge Le Panier <img src="images/hebergements/Auberge Le Panier.jpg" alt="Photo de l'Auberge Le Panier" /></a>
+                        <p>Nuit à partir de 23€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+
+                        <div class="hebergements">
+                        <a href="#" class="">Hôtel chez Amina <img src="images/hebergements/Hotel chez Amina.jpg" alt="Photo de l'Hôtel chez Amina" /></a>
+                        <p>Nuit à partir de 96€</p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                        </div>
+                    </div>
                 </aside>
 
                 <aside>
