--- a/index.html
+++ b/index.html
@@ -56,78 +56,124 @@
             
 
             <section>
-                <aside id="hebergements_block">
+                <div id="hebergements_block">
                     <h1>Hébergements à Marseille</h1>
-                    <div class="hebergements">
-                        <a href="#" class="">Auberge la Cannebière <img src="images/hebergements/Auberge la Cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" /></a>
-                        <p>Nuit à partir de 25€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star"></i>
+                        <div class="hebergements">
+                            <a href="#" class="">Auberge la Cannebière <img src="images/hebergements/Auberge la Cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" /></a>
+                            <p>Nuit à partir de <b>25€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
                         </div>
 
                         <div class="hebergements">
-                        <a href="#" class="">Hôtel du port <img src="images/hebergements/Hotel du port.jpg" alt="Photo de l'Hôtel du port" /></a>
-                        <p>Nuit à partir de 52€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
+                            <a href="#" class="">Hôtel du port <img src="images/hebergements/Hotel du port.jpg" alt="Photo de l'Hôtel du port" /></a>
+                            <p>Nuit à partir de 52<b>€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                            </div>
                         </div>
 
                         <div class="hebergements">
-                        <a href="#" class="">Hôtel Les mouettes <img src="images/hebergements/Hotel Les mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" /></a>
-                        <p>Nuit à partir de 76€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star"></i>
+                            <a href="#" class="">Hôtel Les mouettes <img src="images/hebergements/Hotel Les mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" /></a>
+                            <p>Nuit à partir de 76<b>€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+
+                            <div class="hebergements">
+                            <a href="#" class="">Hôtel de la mer <img src="images/hebergements/Hotel de la mer.jpg" alt="Photo de l'Hôtel de la mer" /></a>
+                            <p>Nuit à partir de 46<b>€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
                         </div>
 
                         <div class="hebergements">
-                        <a href="#" class="">Hôtel de la mer <img src="images/hebergements/Hotel de la mer.jpg" alt="Photo de l'Hôtel de la mer" /></a>
-                        <p>Nuit à partir de 46€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
+                            <a href="#" class="">Auberge Le Panier <img src="images/hebergements/Auberge Le Panier.jpg" alt="Photo de l'Auberge Le Panier" /></a>
+                            <p>Nuit à partir de <b>23€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
                         </div>
 
                         <div class="hebergements">
-                        <a href="#" class="">Auberge Le Panier <img src="images/hebergements/Auberge Le Panier.jpg" alt="Photo de l'Auberge Le Panier" /></a>
-                        <p>Nuit à partir de 23€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star"></i>
+                            <a href="#" class="">Hôtel chez Amina <img src="images/hebergements/Hotel chez Amina.jpg" alt="Photo de l'Hôtel chez Amina" /></a>
+                            <p>Nuit à partir de 96<b>€</b></p>
+                            <div class="stars">
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                                <i class="fa fa-star gold"></i>
+                            </div>
                         </div>
-
-                        <div class="hebergements">
-                        <a href="#" class="">Hôtel chez Amina <img src="images/hebergements/Hotel chez Amina.jpg" alt="Photo de l'Hôtel chez Amina" /></a>
-                        <p>Nuit à partir de 96€</p>
-                        <div class="stars">
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                            <i class="fa fa-star gold"></i>
-                        </div>
-                    </div>
-                </aside>
+                </div>
 
                 <aside>
+                    <div id="populaires_picto">
                     <h1>Les plus populaires</h1>
+                    <i class="fas fa-chart-line"></i>
+                    ></div>
+
+
+                     <div class="populaires">
+                        <a href="#" class="">Hôtel Le soleil du matin <img src="images/hebergements/Hotel Le soleil du matin.jpg" alt="Photo de l'Hôtel Le soleil du matin" /></a>
+                        <p>Nuit à partir de 128<b>€</b></p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                        </div>
+                        </div>
+
+                        <div class="populaires">
+                        <a href="#" class="">Au coeur de l'eau<br />Chambres d'hôtes <img src="images/hebergements/Au coeur de l'eau.jpg" alt="Photo d'au coeur de l'eau Chambres d'hôtes" /></a>
+                        <p>Nuit à partir de 71<b>€</b></p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        </div>
+
+                        <div class="populaires">
+                        <a href="#" class="">Hôtel Tout bleu et Blanc <img src="images/hebergements/Hotel Tout bleu et Blanc.jpg" alt="Photo de l'Hôtel Tout bleu et Blanc" /></a>
+                        <p>Nuit à partir de 68<b>€</b></p>
+                        <div class="stars">
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star gold"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        </div>
+
                 </aside>
             </section>
  
