--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
             	<nav>
                     <ul>
-                        <li><a href="#">Hébergements</a></li>
-                        <li><a href="#">Activités</a></li>
+                        <li><a href="#section2">Hébergements</a></li>
+                        <li><a href="#section3">Activités</a></li>
                         <li><a href="#"><span id="style_inscrire">S'inscrire</span></a></li>
                     </ul>
                 </nav>
@@ -52,7 +52,7 @@
             <section id="section2">
                     
                 <article>
-                    <h1>Hébergements à Marseille</h1>
+                        <h1>Hébergements à Marseille</h1>
                         <ul id="hebergements_block">
                             <li class="hebergements">
                                 <a href="#"> 
