--- a/index.html
+++ b/index.html
@@ -156,47 +156,59 @@
 
                         <ul id="populaires_block">
                             <li class="populaires">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/Hotel Le soleil du matin.jpg" alt="Photo de l'Hôtel Le soleil du matin" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel Le soleil du matin.jpg" alt="Photo de l'Hôtel Le soleil du matin" />
-                                 <h3>Hôtel Le soleil du matin</h3>
-                                 <p>Nuit à partir de 128<b>€</b></p>
-                                 <ul class="stars">
+                                    <h3>Hôtel Le soleil du matin</h3>
+                                    <p>Nuit à partir de 128<b>€</b></p>
+                                    <ul class="stars">
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="populaires">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/Au coeur de l'eau.jpg" alt="Photo d'au coeur de l'eau Chambres d'hôtes" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/Au coeur de l'eau.jpg" alt="Photo d'au coeur de l'eau Chambres d'hôtes" />
-                                 <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
-                                 <p>Nuit à partir de 71<b>€</b></p>
-                                 <ul class="stars">
+                                    <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
+                                    <p>Nuit à partir de 71<b>€</b></p>
+                                    <ul class="stars">
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="populaires">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/Hotel Tout bleu et Blanc.jpg" alt="Photo de l'Hôtel Tout bleu et Blanc" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel Tout bleu et Blanc.jpg" alt="Photo de l'Hôtel Tout bleu et Blanc" />
-                                 <h3>Hôtel Tout bleu et Blanc</h3>
-                                 <p>Nuit à partir de 68<b>€</b></p>
-                                 <ul class="stars">
+                                    <h3>Hôtel Tout bleu et Blanc</h3>
+                                    <p>Nuit à partir de 68<b>€</b></p>
+                                    <ul class="stars">
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
                         </ul>
