--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul id="hebergements_block">
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Auberge la Cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" />
+                                 <img src="images/hebergements/auberge_la_cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" />
                                  <h3>Auberge la Cannebière</h3>
                                  <p>Nuit à partir de <b>25€</b></p>
                                  <ul class="stars">
@@ -71,7 +71,7 @@
 
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel du port.jpg" alt="Photo de l'Hôtel du port" />
+                                 <img src="images/hebergements/hotel_du_port.jpg" alt="Photo de l'Hôtel du port" />
                                  <h3>Hôtel du port</h3>
                                  <p>Nuit à partir de 52<b>€</b></p>
                                  <ul class="stars">
@@ -86,7 +86,7 @@
 
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel Les mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" />
+                                 <img src="images/hebergements/hotel_les_mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" />
                                  <h3>Hôtel Les mouettes</h3>
                                  <p>Nuit à partir de 76<b>€</b></p>
                                  <ul class="stars">
@@ -101,7 +101,7 @@
 
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel de la mer.jpg" alt="Photo de l'Hôtel de la mer" />
+                                 <img src="images/hebergements/hotel_de_la_mer.jpg" alt="Photo de l'Hôtel de la mer" />
                                  <h3>Hôtel de la mer</h3>
                                  <p>Nuit à partir de 46<b>€</b></p>
                                  <ul class="stars">
@@ -116,7 +116,7 @@
 
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Auberge Le Panier.jpg" alt="Photo de l'Auberge Le Panier" />
+                                 <img src="images/hebergements/auberge_le_panier.jpg" alt="Photo de l'Auberge Le Panier" />
                                  <h3>Auberge Le Panier</h3>
                                  <p>Nuit à partir de <b>23€</b></p>
                                  <ul class="stars">
@@ -131,7 +131,7 @@
 
                             <li class="hebergements">
                                 <a href="#"> 
-                                 <img src="images/hebergements/Hotel chez Amina.jpg" alt="Photo de l'Hôtel chez Amina" />
+                                 <img src="images/hebergements/hotel_chez_amina.jpg" alt="Photo de l'Hôtel chez Amina" />
                                  <h3>Hôtel chez Amina</h3>
                                  <p>Nuit à partir de 96<b>€</b></p>
                                  <ul class="stars">
@@ -158,7 +158,7 @@
                             <li class="populaires">
                                 <figure>
                                     <a href="#">   
-                                    <img src="images/hebergements/Hotel Le soleil du matin.jpg" alt="Photo de l'Hôtel Le soleil du matin" />
+                                    <img src="images/hebergements/hotel_le_soleil_du_matin.jpg" alt="Photo de l'Hôtel Le soleil du matin" />
                                     </a>
                                 </figure>
                                 <a href="#"> 
@@ -177,7 +177,7 @@
                             <li class="populaires">
                                 <figure>
                                     <a href="#">   
-                                    <img src="images/hebergements/Au coeur de l'eau.jpg" alt="Photo d'au coeur de l'eau Chambres d'hôtes" />
+                                    <img src="images/hebergements/au_coeur_de_l_eau.jpg" alt="Photo d'au coeur de l'eau Chambres d'hôtes" />
                                     </a>
                                 </figure>
                                 <a href="#"> 
@@ -196,7 +196,7 @@
                             <li class="populaires">
                                 <figure>
                                     <a href="#">   
-                                    <img src="images/hebergements/Hotel Tout bleu et Blanc.jpg" alt="Photo de l'Hôtel Tout bleu et Blanc" />
+                                    <img src="images/hebergements/hotel_tout_bleu_et_blanc.jpg" alt="Photo de l'Hôtel Tout bleu et Blanc" />
                                     </a>
                                 </figure>
                                 <a href="#"> 
@@ -225,13 +225,13 @@
                     <li class="activites">
                         <figure>
                          <a href="#">   
-                            <img src="images/activites/vieux_Port.jpg" alt="Photo du Vieux Port" />
+                            <img src="images/activites/vieux_port.jpg" alt="Photo du Vieux Port" />
                             <figcaption>Vieux Port</figcaption>
                          </a>
                         </figure>
                     </li>
 
-                    <li class="activites">
+                    <li class="activites2">
                         <figure>
                          <a href="#">   
                             <img src="images/activites/fort_de_pomegues.jpg" alt="Photo du Fort de Pomègues" />
@@ -256,7 +256,7 @@
                         </figure>
                     </li>
 
-                    <li class="activites">
+                    <li class="activites2">
                         <figure>
                          <a href="#">   
                             <img src="images/activites/notre-dame-de-la-garde.jpg" alt="Photo de Notre-Dame-de-la-Garde" />
