--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                         <h1>Hébergements à Marseille</h1>
                         <ul id="hebergements_block">
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/auberge_la_cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/auberge_la_cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" />
                                  <h3>Auberge la Cannebière</h3>
                                  <p>Nuit à partir de <b>25€</b></p>
                                  <ul class="stars">
@@ -65,13 +69,17 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/hotel_du_port.jpg" alt="Photo de l'Hôtel du port" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/hotel_du_port.jpg" alt="Photo de l'Hôtel du port" />
                                  <h3>Hôtel du port</h3>
                                  <p>Nuit à partir de 52<b>€</b></p>
                                  <ul class="stars">
@@ -80,13 +88,17 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/hotel_les_mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/hotel_les_mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" />
                                  <h3>Hôtel Les mouettes</h3>
                                  <p>Nuit à partir de 76<b>€</b></p>
                                  <ul class="stars">
@@ -95,13 +107,17 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/hotel_de_la_mer.jpg" alt="Photo de l'Hôtel de la mer" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/hotel_de_la_mer.jpg" alt="Photo de l'Hôtel de la mer" />
                                  <h3>Hôtel de la mer</h3>
                                  <p>Nuit à partir de 46<b>€</b></p>
                                  <ul class="stars">
@@ -110,13 +126,17 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/auberge_le_panier.jpg" alt="Photo de l'Auberge Le Panier" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/auberge_le_panier.jpg" alt="Photo de l'Auberge Le Panier" />
                                  <h3>Auberge Le Panier</h3>
                                  <p>Nuit à partir de <b>23€</b></p>
                                  <ul class="stars">
@@ -125,13 +145,17 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
 
                             <li class="hebergements">
+                                <figure>
+                                    <a href="#">   
+                                    <img src="images/hebergements/hotel_chez_amina.jpg" alt="Photo de l'Hôtel chez Amina" />
+                                    </a>
+                                </figure>
                                 <a href="#"> 
-                                 <img src="images/hebergements/hotel_chez_amina.jpg" alt="Photo de l'Hôtel chez Amina" />
                                  <h3>Hôtel chez Amina</h3>
                                  <p>Nuit à partir de 96<b>€</b></p>
                                  <ul class="stars">
@@ -140,7 +164,7 @@
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
                                         <li><i class="fa fa-star gold"></i></li>
-                                 </ul>
+                                    </ul>
                                 </a>
                             </li>
                         </ul>
