--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/d0fc7168c2.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
     </head>
@@ -205,7 +206,7 @@
                                     </a>
                                 </figure>
                                 <a href="#"> 
-                                    <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
+                                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                     <p>Nuit à partir de 71<b>€</b></p>
                                     <ul class="stars">
                                         <li><i class="fa fa-star gold"></i></li>
