--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <ul>
                         <li><a href="#section2">Hébergements</a></li>
                         <li><a href="#section3">Activités</a></li>
-                        <li><a href="#"><span id="style_inscrire">S'inscrire</span></a></li>
                     </ul>
+                    <a id="style_inscrire" href="#">S'inscrire</a>
                 </nav>
             </header>    
             
