--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                    <p>En plein centre ville ou en pleine nature</p>
                 
                    
-                    <form action="" class="formulaire">
+                    <form action="formulaire" class="formulaire">
                         <i class="fas fa-map-marker-alt"></i>   
                         <input class="champ" type="Search" name="q" value="Marseille, France"/>
                         <button class="bouton" type="submit" form="formulaire" value="Submit">Rechercher</button>
