--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <i class="fas fa-map-marker-alt"></i>   
                         <input class="champ" type="Search" name="q" value="Marseille, France"/>
                         <button class="bouton" type="submit" form="formulaire" value="Submit">Rechercher</button>
-                        <button class="bouton_min" type="submit" form="formulaire" value="Submit"><i class="fas fa-search"></i></button>
+                        <button class="bouton_min" type="submit" value="Submit"><i class="fas fa-search"></i></button>
                     </form>
                    
 
