--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <form action="formulaire" class="formulaire">
                         <i class="fas fa-map-marker-alt"></i>   
                         <input class="champ" type="Search" name="q" value="Marseille, France"/>
-                        <button class="bouton" type="submit" form="#" value="Submit">Rechercher</button>
-                        <button class="bouton_min" type="submit" form="#" value="Submit"><i class="fas fa-search"></i></button>
+                        <button class="bouton" type="submit" value="Submit">Rechercher</button>
+                        <button class="bouton_min" type="submit" value="Submit"><i class="fas fa-search"></i></button>
                     </form>
                    
 
