--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <h2>A propos</h2>
                          <ul class="footers_liens">
                             <li><a href="#">Fonctionnement du site</a></li>
-                            <li><a href="#">Conditionds générales de vente</a></li>
+                            <li><a href="#">Conditions générales de vente</a></li>
                             <li><a href="#">Données et confidentialité</a></li>
                         </ul>
                     </li>
