--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
             <section id="section2">
-                <h2></h2>
+                <h2>bloc hebergements et populaires</h2>
                     <article>
                         <h2>Hébergements à Marseille</h2>
                         <ul id="hebergements_block">
