--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <form action="formulaire" class="formulaire">
                         <i class="fas fa-map-marker-alt"></i>   
                         <input class="champ" type="Search" name="q" value="Marseille, France"/>
-                        <button class="bouton" type="submit" value="Submit">Rechercher</button>
-                        <button class="bouton_min" type="submit" value="Submit"><i class="fas fa-search"></i></button>
+                        <button class="bouton" type="submit" value="Submit"><span id="rechercher">Rechercher</span><i class="fas fa-search"></i></button>
                     </form>
+                        
                    
 
                     <ul id="filtres">
