--- a/index.html
+++ b/index.html
@@ -287,12 +287,13 @@
                         </figure>
                     
 
+                        <a href="#">
                         <figure>
                          <a href="#">   
                             <img src="images/activites/parc_longchamp.jpg" alt="Photo du Parc Longchamp" />
                             <figcaption>Parc Longchamp</figcaption>
-                         </a>
-                        </figure>
+                         
+                        </figure></a>
                 </div>
             </section>       
 
